live-prop-test-macros/tests/compile_fail/wildcard_argument.stderr
error: live-prop-test only supports function arguments that are bound by-value as an identifier
 --> $DIR/wildcard_argument.rs:4:9
  |
4 | fn five(_: i32) -> i32 {
  |         ^
